major zadic improvements (VID, PID, inf as paramaters, etc.)
also added getopt for MS builds of zadic

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,7 @@
 copyright (c) 2010 Pete Batard <pbatard@gmail.com>
 
+zadic improvements:
+  copyright (c) 2010 Joseph Marshall <jmarshall@gcdataconcepts.com>
+
 libconfig authors: 
   Mark Lindner, Daniel Marjamäki, Andrew Tytula, Glenn Herteg
