switched to tokenizer + inf templates for inf generation
tokenizer courtesy of Travis Robinson

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 copyright (c) 2010 Pete Batard <pbatard@gmail.com>
+copyright (c) 2010 Travis Robinson <libusbdotnet@gmail.com>
 
 zadic improvements:
   copyright (c) 2010 Joseph Marshall <jmarshall@gcdataconcepts.com>
