improved security prompt handling
- try to close security popup if still present on installer exit

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,6 @@ zadic improvements:
 
 libconfig authors: 
   Mark Lindner, Daniel Marjamäki, Andrew Tytula, Glenn Herteg
+
+additional testing, improvement suggestions and other wise advice:
+  Xiaofan Chen
