--- a/ChangeLog
+++ b/ChangeLog
@@ -1,1 +1,3 @@
-1.0.0 ALPHA
+For the latest changes, visit: http://git.libusb.org/?p=libwdi.git;a=shortlog
+
+o v1.0.1 (2010.09.01) - Initial Release
