added MinGW/MS DLL interchangeability

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,13 @@
 For the latest changes, visit: http://git.libusb.org/?p=libwdi.git;a=shortlog
 
+o v1.0.3 (2010.10.??)
+  Bugfixes:
+  - progress bar text was not being erased properly
+  Improvements:
+  - libwdi can now be cross-compiled
+  - MinGW and MS generated DLLs are interchangeable
 o v1.0.2 (2010.09.15) 
-  Bugfixes :
+  Bugfixes:
   - WinUSB inf file appends libusb0 template
   - inf-wizard does not support international characters
   Improvements:
