[zadig] switch to GPLv3 + License and other About dialog improvements

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,11 +1,11 @@
-copyright (c) 2010-2011 Pete Batard <pbatard@gmail.com>
+copyright (c) 2010-2011 Pete Batard <pete@akeo.ie>
 copyright (c) 2010-2011 Travis Robinson <libusbdotnet@gmail.com>
 
-zadic improvements:
+Zadic improvements:
   copyright (c) 2010 Joseph Marshall <jmarshall@gcdataconcepts.com>
 
-profile parser author: 
+profile parser author (Zadig): 
   Theodore Ts'o
 
-additional testing, improvement suggestions and other wise advice:
+Additional testing, improvement suggestions and overall wise advice:
   Xiaofan Chen
