[internal] bumped internal version

--- a/README
+++ b/README
@@ -27,7 +27,7 @@ Installation and Compilation:
   Please visit: https://github.com/pbatard/libwdi/wiki/Install
 
 API usage:
-  Please visit: https://github.com/pbatard/libwdi/wiki/Usage]
+  Please visit: https://github.com/pbatard/libwdi/wiki/Usage
 
 FAQ:
   Please visit: https://github.com/pbatard/libwdi/wiki/FAQ
