[zadig] fix possible crash when listing devices
* Size of the string passed to GetTextExtentPoint was incorrect
* Use GetTextExtentPoint32 rather than GetTextExtentPoint
* Add additional error messages
* Also fix AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,10 +5,10 @@ Other contributors:
 Alexander Sashnov
 Bob Paddock
 JaggedJax
-Jasper van Bourgognie
 Jerome-PS
 Joseph Marshall
 Liam Staskawicz
+Louie Caulfield
 Uri Lublin
 Vitali Lovich
 Xiaofan Chen
