--- a/AUTHORS
+++ b/AUTHORS
@@ -1,16 +1,23 @@
-Copyright ©  2010-2016 Pete Batard <pete@akeo.ie>
-Copyright ©  2010-2011 Travis Robinson <libusbdotnet@gmail.com>
+Copyright Â© 2010-2020 Pete Batard <pete@akeo.ie>
+Copyright Â© 2010-2011 Travis Robinson <libusbdotnet@gmail.com>
 
 Other contributors:
 Alexander Sashnov
 Bob Paddock
+Fred Sundvik
+Georg Vienna
+Jacob Alexander
 JaggedJax
+Jasper van Bourgognie
+Jeorg Fischer
 Jerome-PS
 Joseph Marshall
+Karel Bilek
 Liam Staskawicz
 Louie Caulfield
 PhracturedBlue
 Ryan Pavlik
+Stanley Elliott
 Uri Lublin
 Vitali Lovich
 Xiaofan Chen
