[core] pick libusb-win32 and libusbK versions from the DLL
* Unfortunately, libusbK does not keep the .sys and .dll versions in check
  and we logically picked our version from the .sys. Considering that the
  projects are more likely to update the DLL than the driver, switch to
  using the version from the DLL.

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,7 @@ o v1.4.0 (2021.09.04)
   Bugfixes:
   - fix breakage when providing a user driver
   - work around Windows corrupting the key containers
-  - don't populate empty device decriptors
+  - don't populate empty device descriptors
   Improvements:
   - more error reporting improvements
   - remove the zadic sample
