[github] update GitHub Actions build files
* And also update AUTHORS to latest.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Copyright © 2010-2021 Pete Batard <pete@akeo.ie>
+Copyright © 2010-2023 Pete Batard <pete@akeo.ie>
 Copyright © 2010-2011 Travis Robinson <libusbdotnet@gmail.com>
 
 Other contributors:
@@ -6,18 +6,23 @@ Alexander Sashnov
 Bob Paddock
 Fred Sundvik
 Georg Vienna
+Giovanni Bajo
 Jacob Alexander
 JaggedJax
 Jasper van Bourgognie
 Jeorg Fischer
 Jerome-PS
+Joel Holdsworth
 Joseph Marshall
+Josh Soerf
 Karel Bilek
 Liam Staskawicz
 Louie Caulfield
 PhracturedBlue
 Ryan Pavlik
+Spiro Trikaliotis
 Stanley Elliott
+Tim Gates
 Uri Lublin
 Vitali Lovich
 Xiaofan Chen
