--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,16 @@
 For the latest changes, please visit:
   https://github.com/pbatard/libwdi/commits/master
 
+o v1.5.0 (2023.03.01)
+  New features:
+  - ARM64 driver installation support (WinUSB, USBSer with MSVC only)
+  Bugfixes:
+  - fix MSVC compilation of the shared library
+  - fix MinGW compilation when using the shared library (with thanks to Joel Holdsworth)
+  Improvements:
+  - avoid symbol conflicts by using library specific prefixes where needed
+  - improve Zadig network support
+
 o v1.4.1 (2021.11.01)
   New features:
   - add a new 'external_inf' boolean option to wdi_options_prepare_driver
