--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,14 @@
 For the latest changes, please visit:
   https://github.com/pbatard/libwdi/commits/master
 
+o v1.5.1 (2024.06.13)
+  New features:
+  - libusb-win32 ARM64 driver installation support (courtesy of Peter Dons Tychsen)
+  Bugfixes:
+  - fix filter installer being potentially overwritten (courtesy of Peter Dons Tychsen)
+  Improvements:
+  - improve Windows edition and platform reporting
+
 o v1.5.0 (2023.03.01)
   New features:
   - ARM64 driver installation support (WinUSB, USBSer with MSVC only)
